[gd_scene load_steps=5 format=3 uid="uid://dv608rynpxip0"]

[ext_resource type="Script" path="res://gui/voices/FallbackVoiceDeck.gd" id="1_jbit7"]
[ext_resource type="PackedScene" uid="uid://duig5v2saqys2" path="res://gui/components/deck/VoiceDeckHeader.tscn" id="2_r3ag6"]
[ext_resource type="PackedScene" uid="uid://kvxy6miofpxj" path="res://gui/components/knobs/KnobControl.tscn" id="2_tnnyd"]
[ext_resource type="PackedScene" uid="uid://dunu7j0jh1pne" path="res://gui/components/deck/VoiceOperatorsHeader.tscn" id="4_sntxt"]

[node name="FallbackVoiceDeck" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FallbackVoiceDeck"
script = ExtResource("1_jbit7")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="VoiceHeader" parent="Layout" instance=ExtResource("2_r3ag6")]
unique_name_in_owner = true
layout_mode = 2

[node name="VoiceControls" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="VolumeKnob" parent="Layout/VoiceControls" instance=ExtResource("2_tnnyd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="ChannelSeparator" type="HSeparator" parent="Layout"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ChannelLabel" type="Label" parent="Layout"]
layout_mode = 2
text = "CHANNEL KNOBS"

[node name="ChannelKnobs" type="VBoxContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="OperatorSeparator" type="HSeparator" parent="Layout"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OperatorsHeader" parent="Layout" instance=ExtResource("4_sntxt")]
unique_name_in_owner = true
layout_mode = 2
operator_count = 1

[node name="OperatorKnobs" type="TabContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
